--- a/libs/wordpress-plugin/plugin/trunk/changelog.txt
+++ b/libs/wordpress-plugin/plugin/trunk/changelog.txt
@@ -1,7 +1,11 @@
 == Changelog ==
 
+= 0.0.8 =
+* Improved onboarding experience
+* Attempt to re-run migrations where they previously failed, for older dbs now supported
+
 = 0.0.7 =
-* Provider better support for querying with MariaDB
+* Provide better support for querying with MariaDB
 
 = 0.0.6 =
 * Support older versions of MySQL (Minimum version is now 5.7.8 down from 8.0)
