Update page locations, minor tweaks to Hub page copy

--- a/apps/site/src/_pages/docs/4_hub/00_index.mdx
+++ b/apps/site/src/_pages/docs/4_hub/00_index.mdx
@@ -1,8 +1,8 @@
-# Þ Hub
+# Hub
 
 The Block Protocol (**Þ**) _**Hub**_ provides an easy way to discover, access and publish blocks, types, and services for free.
 
-**The Þ Hub exists because interoperability without discoverability is of limited use.** The Þ Hub provides a single persistent, reliable, and open-source point of reference for the discovery of new Þ-compatible content. Creators only need to publish once, while embedding applications can easily discover new blocks, types and services, making them instantly available to their own users.
+**The _Þ Hub_ exists because interoperability without discoverability is of limited use.** By providing a persistent, precictable, and reliable open-source reference point for the discovery of new Þ-compatible content, creators need only publish their work once, while embedding applications can easily discover new blocks, types and services, making them instantly available to their own users.
 
 ## Access
 
