Update blocks docs roadmap link

--- a/apps/site/src/_pages/docs/1_blocks/01_environments.mdx
+++ b/apps/site/src/_pages/docs/1_blocks/01_environments.mdx
@@ -37,6 +37,6 @@ If there's an application you'd like to see us exploring, please [reach out](htt
 
 #### Your own application
 
-Alternatively, if you're an application developer interested in implementing the Block Protocol within your own app, allowing your users to insert blocks and use services from the [Þ Hub](https://blockprotocol.org/hub), please [reach out to us](https://blockprotocol.org/contact) and we'll be in touch. While the protocol remains under heavy active development, we haven't yet released public documentation covering this process, but doing so is on our [roadmap](https://blockprotocol.org/docs/roadmap).
+Alternatively, if you're an application developer interested in implementing the Block Protocol within your own app, allowing your users to insert blocks and use services from the [Þ Hub](https://blockprotocol.org/hub), please [reach out to us](https://blockprotocol.org/contact) and we'll be in touch. While the protocol remains under heavy active development, we haven't yet released public documentation covering this process, but doing so is on our [roadmap](https://blockprotocol.org/roadmap).
 
 You can also [register for updates](https://blockprotocol.org/signup) to get notified when we release new docs and tools for embedders.
