Update links in `docs` Types page

--- a/apps/site/src/_pages/docs/2_types.mdx
+++ b/apps/site/src/_pages/docs/2_types.mdx
@@ -2,7 +2,7 @@
 
 ## Introduction
 
-When using the Block Protocol's [graph module](/docs/spec/graph-module), data is shared between applications and blocks
+When using the Block Protocol's [graph module](/spec/graph), data is shared between applications and blocks
 in the form of 'entities', and each entity has a type, known as an 'entity type'.
 
 This type describes what properties an entity has, what type of value each is expected to be, and the relationship
@@ -14,7 +14,7 @@ The system by which types are defined is known as the 'type system'.
 
 ## The type system
 
-The Block Protocol's [type system](https://blockprotocol.org/docs/spec/graph#the-type-system) is designed so that types are composed of re-usable, sharable parts, which can be
+The Block Protocol's [type system](https://blockprotocol.org/spec/graph#the-type-system) is designed so that types are composed of re-usable, sharable parts, which can be
 referenced by other users and by other types.
 
 The type system consists of three classes of elements:
