--- a/apps/site/src/_pages/spec/02_graph.mdx
+++ b/apps/site/src/_pages/spec/02_graph.mdx
@@ -1,6 +1,6 @@
 # Graph Module
 
-This document (version 0.3) defines a **graph module** according to the terms set out in the [core specification](https://blockprotocol.org/docs/spec/core).
+This document (version 0.3) defines a **graph module** according to the terms set out in the [core specification](https://blockprotocol.org/spec/core).
 
 The graph module describes how **ontology types** and **entities** can be created, queried, updated, and linked together – including the **block entity** (the entity associated directly with the block).
 
