fix links from /docs/spec to /spec

--- a/apps/site/src/_pages/docs/5_faq.mdx
+++ b/apps/site/src/_pages/docs/5_faq.mdx
@@ -10,7 +10,7 @@ The Block Protocol provides a specification for the interaction between web bloc
 
 Its ultimate goal in doing so is to enable any blocks to be usable by any web application without any configuration, once both are compliant with the Protocol.
 
-More information on the motivation can be found in [the specification overview.](https://blockprotocol.org/docs/spec)
+More information on the motivation can be found in [the specification overview.](https://blockprotocol.org/spec)
 
 </FAQ>
 
@@ -109,7 +109,7 @@ Entity data can be hosted in any application which implements the Block Protocol
 
 Yes. Blocks can fetch their own data from external modules. For example, a map block might fetch data from a mapping module.
 
-We believe the best blocks will communicate data back and forth with the embedding application, making use of the operations defined in the [Graph Module specification](https://blockprotocol.org/docs/spec/graph-module).
+We believe the best blocks will communicate data back and forth with the embedding application, making use of the operations defined in the [Graph Module specification](https://blockprotocol.org/spec/graph-module).
 
 For example: a mapping block might persist a user’s choices about map positioning or styling back to an embedding application, all without the application knowing anything about the block, or the block even being aware of which application it is being used within.
 
@@ -121,7 +121,7 @@ The Block Protocol enables blocks to store and retrieve data in an application w
 
 Blocks can have their own local state - they might use this to allow users to explore data or draft changes, without saving anything.
 
-To save data beyond the session, blocks should make use of the [operations defined in the spec](https://blockprotocol.org/docs/spec/graph-module) to send updates to the embedding application.
+To save data beyond the session, blocks should make use of the [operations defined in the spec](https://blockprotocol.org/spec/graph-module) to send updates to the embedding application.
 
 </FAQ>
 
@@ -186,7 +186,7 @@ Rich text editing is a core part of many modern block-based applications, but de
 - applications often provide special functionality inside rich text fields, e.g. being able to `@mention` or search for things inline
 
 We do not believe it feasible or desirable to impose a single rich text editing experience across applications,
-and instead have introduced the [Hook Module](https://blockprotocol.org/docs/spec/hook-module) to allow embedding applications to
+and instead have introduced the [Hook Module](https://blockprotocol.org/spec/hook-module) to allow embedding applications to
 inject their own rich text editing display and input, at blocks' request.
 
 </FAQ>
@@ -234,7 +234,7 @@ We do not yet believe it necessary to specify block-application requests in Grap
 Yes, blocks can make requests to external APIs. They can do this in one of two ways:
 
 - **directly:** all of the code require to access an API can be contained within a block. This is not recommended in circumstances where a service requires an API key in order to access it, as it will be impossible to keep this key secret if a block (and for a block to remain usable) once the block is published to the [Þ Hub](https://blockprotocol.org/hub).
-- **through the Þ Hub:** in addition to blocks and types, endpoints (APIs) can also be made accessible via the Þ Hub. Currently available endpoints include _OpenAI_ and _Mapbox_. All Block Protocol users receive free credits for use with these services, and receive discounted access through Þ Hobby and Þ Pro subscriptions. Individual embedding applications can additionally override the Block Protocol API's handling of any available service, and choose to resolve these themselves, falling back to the Block Protocol's support for services or ignoring them entirely. Read more in the [Service module](https://blockprotocol.org/docs/spec/service-module) specification.
+- **through the Þ Hub:** in addition to blocks and types, endpoints (APIs) can also be made accessible via the Þ Hub. Currently available endpoints include _OpenAI_ and _Mapbox_. All Block Protocol users receive free credits for use with these services, and receive discounted access through Þ Hobby and Þ Pro subscriptions. Individual embedding applications can additionally override the Block Protocol API's handling of any available service, and choose to resolve these themselves, falling back to the Block Protocol's support for services or ignoring them entirely. Read more in the [Service module](https://blockprotocol.org/spec/service-module) specification.
 
 Facilitating external API access via the Þ Hub is a new addition to the protocol, and intructions for making additional endpoints available will be added in due course. In the meantime, we're able to manually add endpoints on behalf of block developers. If there's an endpoint you'd like to use within a new or existing block, please [message us on Discord](https://blockprotocol.org/discord).
 
@@ -396,7 +396,7 @@ We expect to have to add custom keywords to cover relationships which JSON Schem
 
 We encourage applications to include JSON-LD describing entities on their public pages to make them machine-readable.
 
-In theory, the Block Protocol could use JSON-LD as the format in which entities are passed between applications and blocks. We did not pursue this because we believe it will be easier and more scalable to handle links between entities outside the JSON for the entity itself, [as described here](https://blockprotocol.org/docs/spec/graph-module). We have also taken a different approach to identifying entities, which may not have a public URL and may require a combination of fields to identify.
+In theory, the Block Protocol could use JSON-LD as the format in which entities are passed between applications and blocks. We did not pursue this because we believe it will be easier and more scalable to handle links between entities outside the JSON for the entity itself, [as described here](https://blockprotocol.org/spec/graph-module). We have also taken a different approach to identifying entities, which may not have a public URL and may require a combination of fields to identify.
 
 </FAQ>
 
