--- a/apps/site/src/_pages/spec/04_service.mdx
+++ b/apps/site/src/_pages/spec/04_service.mdx
@@ -1,6 +1,6 @@
 # Service Module
 
-This document (version 0.1) defines a **service module** according to the terms set out in the [core specification](https://blockprotocol.org/docs/spec/core).
+This document (version 0.1) defines a **service module** according to the terms set out in the [core specification](https://blockprotocol.org/spec/core).
 
 The service module enables blocks to interact with external services without needing to be provided with credentials: the embedding application calls the external service on the block's behalf.
 
