--- a/apps/site/src/_pages/spec/00_index.mdx
+++ b/apps/site/src/_pages/spec/00_index.mdx
@@ -27,7 +27,7 @@ It defines how structured data is passed between blocks and embedding applicatio
 
 The Block Protocol is split into a core specification and module specifications.
 
-The [core specification](https://blockprotocol.org/docs/spec/core) sets out how blocks should be defined, how modules are defined, how embedding applications should initialize blocks, and _how_ applications and blocks communicate.
+The [core specification](https://blockprotocol.org/spec/core) sets out how blocks should be defined, how modules are defined, how embedding applications should initialize blocks, and _how_ applications and blocks communicate.
 
 Each **module specification** defines _what_ applications and blocks communicate. A module is a logical grouping of messages blocks and applications may exchange.
 
