remove -module from spec paths

--- a/apps/site/src/_pages/spec/03_hook.mdx
+++ b/apps/site/src/_pages/spec/03_hook.mdx
@@ -11,7 +11,7 @@ The module is designed to meet the following aims:
 
 The module meets these aims by allowing blocks to delegate visualizing and editing functionality upwards to the embedding application.
 
-The hook module is dependent on [the graph module](https://blockprotocol.org/spec/graph-module), as it relies on the existence of **entities** – use of the graph module is a prerequisite for use of the hook module.
+The hook module is dependent on [the graph module](https://blockprotocol.org/spec/graph), as it relies on the existence of **entities** – use of the graph module is a prerequisite for use of the hook module.
 
 ## Glossary
 
