--- a/apps/site/src/_pages/docs/1_blocks/01_environments.mdx
+++ b/apps/site/src/_pages/docs/1_blocks/01_environments.mdx
@@ -21,7 +21,7 @@ The [Block Protocol for Wordpress](https://blockprotocol.org/wordpress) plugin a
 
 #### GitHub Blocks
 
-**We are in the early stages of building out support for Block Protocol blocks in _GitHub_.** Blocks are currently only available in GitHub as part of the _GitHub Next_ early release program, but ultimately this should allow blocks you develop in accordance with the Block Protocol spec to be used within GitHub markdown READMEs interactively, and elsewhere on _GitHub.com_.
+We aim to ensure that blocks developed in accordance with the Block Protocol spec can be used within GitHub markdown READMEs interactively, and elsewhere on _GitHub.com_. Currently blocks are currently only available for use within GitHub as part of the _GitHub Next_ early release program. We are in the early stages of determining what possible support might look like.
 
 #### Figma
 
@@ -29,7 +29,7 @@ The [Block Protocol for Wordpress](https://blockprotocol.org/wordpress) plugin a
 
 ### Other environments
 
-Support for additional embedding environments will arrive throughout 2023.
+Information regarding additional planned embedding environments will be posted here as it becomes available.
 
 #### Make a suggestion
 
