Fix broken jumplinks

--- a/apps/site/src/_pages/legal/terms/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/00_index.mdx
@@ -69,7 +69,7 @@ Version Effective Date: February 28, 2023
 
 #### 2. Required Information
 
-You must provide a valid email address in order to complete the signup process. Any other information requested, such as your real name, is optional, unless you are accepting these terms on behalf of a legal entity (in which case we need more information about the legal entity) or if you opt for a [paid Account](#k-payment), in which case additional information will be necessary for billing purposes.
+You must provide a valid email address in order to complete the signup process. Any other information requested, such as your real name, is optional, unless you are accepting these terms on behalf of a legal entity (in which case we need more information about the legal entity) or if you opt for a [paid Account](#k.-payment), in which case additional information will be necessary for billing purposes.
 
 #### 3. Account Requirements
 
@@ -77,7 +77,7 @@ We have a few simple rules for Personal Accounts on Block Protocol's Service.
 
 - You must be a human to create an Account. Accounts registered by "bots" or other automated methods are not permitted.
 - One person or legal entity may maintain no more than one free Account.
-- You must be age 13 or older. While we are thrilled to see brilliant young coders get excited by learning to program and building blocks, we must comply with United States law. Block Protocol does not target our Service to children under 13, and we do not permit any Users under 13 on our Service. If we learn of any User under the age of 13, we will [terminate that User’s Account immediately](#l-cancellation-and-termination). If you are a resident of a country outside the United States, your country’s minimum age may be older; in such a case, you are responsible for complying with your country’s laws.
+- You must be age 13 or older. While we are thrilled to see brilliant young coders get excited by learning to program and building blocks, we must comply with United States law. Block Protocol does not target our Service to children under 13, and we do not permit any Users under 13 on our Service. If we learn of any User under the age of 13, we will [terminate that User’s Account immediately](#l.-cancellation-and-termination). If you are a resident of a country outside the United States, your country’s minimum age may be older; in such a case, you are responsible for complying with your country’s laws.
 - Your login may only be used by one person — i.e., a single login may not be shared by multiple people. A paid Organization may only provide access to as many Personal Accounts as your subscription allows.
 - You may not use Block Protocol in violation of export control or sanctions laws of the United States or any other applicable jurisdiction. You may not use Block Protocol if you are or are working on behalf of a [Specially Designated National (SDN)](https://www.treasury.gov/resource-center/sanctions/SDN-List/Pages/default.aspx) or a person subject to similar blocking or denied party prohibitions administered by a U.S. government agency. Block Protocol may allow persons in certain sanctioned countries or territories to access certain HASH services pursuant to U.S. government authorizations. For more information, please see the HASH [Export & Trade policy](https://hash.ai/legal/trade-policy), which also applies to the Block Protocol.
 
@@ -175,7 +175,7 @@ Block Protocol will provide notice regarding our access to private project conte
 
 If you believe that content on the Block Protocol website violates your copyright, please contact us in accordance with the HASH [Copyrighted Materials (DMCA) Policy](https://hash.ai/legal/copyright). If you are a copyright owner and you believe that content on Block Protocol violates your rights, please contact us in accordance with the steps outlined in our public HASH [DMCA Takedown Notice submission guidelines](https://hash.ai/legal/copyright-dmca-notice), which outlines the process and contact route via which copyright notices can be served to the Block Protocol. There may be legal consequences for sending a false or frivolous takedown notice. Before sending a takedown request, you must consider legal uses such as fair use and licensed uses.
 
-We will terminate the Accounts of [repeat infringers](/legal/copyright/#e-repeated-infringement) of this policy.
+We will terminate the Accounts of [repeat infringers](/legal/copyright/#e.-repeated-infringement) of this policy.
 
 ### G. Intellectual Property Notice
 
@@ -361,7 +361,7 @@ If any part of this Agreement is held invalid or unenforceable, that portion of 
 
 #### 5. Amendments; Complete Agreement
 
-This Agreement may only be modified by a written amendment signed by an authorized representative of Block Protocol, or by the posting by Block Protocol of a revised version in accordance with [Section Q. Changes to These Terms](#q-changes-to-these-terms). These Terms of Service, together with the Block Protocol Privacy Statement, represent the complete and exclusive statement of the agreement between you and us. This Agreement supersedes any proposal or prior agreement oral or written, and any other communications between you and Block Protocol relating to the subject matter of these terms including any confidentiality or nondisclosure agreements.
+This Agreement may only be modified by a written amendment signed by an authorized representative of Block Protocol, or by the posting by Block Protocol of a revised version in accordance with [Section Q. Changes to These Terms](#q.-changes-to-these-terms). These Terms of Service, together with the Block Protocol Privacy Statement, represent the complete and exclusive statement of the agreement between you and us. This Agreement supersedes any proposal or prior agreement oral or written, and any other communications between you and Block Protocol relating to the subject matter of these terms including any confidentiality or nondisclosure agreements.
 
 #### 6. Questions
 
