--- a/apps/site/src/_pages/roadmap/00_index.mdx
+++ b/apps/site/src/_pages/roadmap/00_index.mdx
@@ -88,7 +88,7 @@ A users module can help expose some of this data to blocks, with appropriate saf
 
 While embedding applications can handle displaying an interface for reloading blocks at particular earlier versions, we will specify a way of communicating to blocks that (a) an earlier version is being displayed, and (b) the difference with the current version would allow blocks to implement visual diffs.
 
-### Changes to existing modules
+### Updating modules
 
 The below changes to existing modules are currently being considered.
 
