--- a/apps/site/src/_pages/docs/1_blocks/01_environments.mdx
+++ b/apps/site/src/_pages/docs/1_blocks/01_environments.mdx
@@ -21,7 +21,7 @@ The [Block Protocol for Wordpress](https://blockprotocol.org/wordpress) plugin a
 
 #### GitHub Blocks
 
-We aim to ensure that blocks developed in accordance with the Block Protocol spec can be used within GitHub markdown READMEs interactively, and elsewhere on _GitHub.com_. Currently blocks are currently only available for use within GitHub as part of the _GitHub Next_ early release program. We are in the early stages of determining what possible support might look like.
+We aim to ensure that blocks developed in accordance with the Block Protocol spec can be used within GitHub markdown READMEs interactively, and elsewhere on _GitHub.com_. Currently blocks are only available for use within GitHub as part of the _GitHub Next_ early release program. We are in the early stages of determining what possible support might look like.
 
 #### Figma
 
