--- a/apps/site/src/_pages/docs/3_services.mdx
+++ b/apps/site/src/_pages/docs/3_services.mdx
@@ -4,7 +4,7 @@
 
 Providers may offer third-party **services**, external to the Block Protocol, which blocks can reach out to and utilize, to provide additional or improved functionality.
 
-An example service is the **OpenAI ChatGPT** API, also known as _GPT-3.5 Turbo_.
+Example services include the **OpenAI ChatGPT** APIs, also known as _GPT-3.5 Turbo_, _GPT-4_ and _GPT-4.5 Turbo_.
 
 The Block Protocol defines a standardized way for blocks to access external services. If an embedding application directly integrates with that service, it can take over handling of the request. If it does not, the block will fall back to processing the request via the Block Protocol itself, which supports a number of different services. These include many of _OpenAI_ and _Mapbox_'s public current public APIs.
 
