--- a/apps/site/src/_pages/legal/privacy/1_private-information-removal.mdx
+++ b/apps/site/src/_pages/legal/privacy/1_private-information-removal.mdx
@@ -33,8 +33,8 @@ For the purposes of this document, “private information” refers to content t
 - **Internal server names, IP addresses, and URLs, on their own.** You must be able to show that their use in a particular file or piece of code poses a security threat. The [National Institute of Standards and Technology](https://en.wikipedia.org/wiki/National_Institute_of_Standards_and_Technology) explicitly advises against relying on "security through obscurity".
 - **Mere mentions of your company's identity, name, brand, domain name, or other references to your company in files on the Block Protocol.** You must be able to articulate why a use of your company's identity is a threat to your company's security posture. See the [Block Protocol Impersonation Policy](/legal/acceptable-use/impersonation) and [HASH Trademark Complaints Policy](https://hash.ai/legal/trademark-complaints) for more information.
 - **Entire files or projects** that do not pose a specific security risk, but you believe are otherwise objectionable.
-- **Requests to remove content that may infringe your or your organization's copyright rights.** If you have questions about how the Block Protocol handles copyright-related matters or would like to report potentially infringing content, please review the [HASH Copyright Materials (DMCA) Policy](https://hash.ai/legal/copyright) which governs the Block Protocol website, in addition to all other HASH websites. The private information removal process is generally _not intended_ for the removal of full files or repositories — only for the specific pieces of private information in those files. While there may be cases where files are filled entirely with private information, you must justify the security risk for the removal of such files, and this may increase the time required to process your request.
-- **Trademark disputes.** If you have questions about how the Block Protocol handles trademark-related matters or would like to report content containing your organization's trade or service marks, please review the [HASH Trademark Complaints Policy](https://hash.ai/legal/trademark-complaints).
+- **Requests to remove content that may infringe your or your organization's copyright rights.** If you have questions about how the Block Protocol handles copyright-related matters or would like to report potentially infringing content, please review the [HASH Copyright Materials (DMCA) Policy](https://hash.ai/legal/ip/copyright) which governs the Block Protocol website, in addition to all other HASH websites. The private information removal process is generally _not intended_ for the removal of full files or repositories — only for the specific pieces of private information in those files. While there may be cases where files are filled entirely with private information, you must justify the security risk for the removal of such files, and this may increase the time required to process your request.
+- **Trademark disputes.** If you have questions about how the Block Protocol handles trademark-related matters or would like to report content containing your organization's trade or service marks, please review the [HASH Trademark Complaints Policy](https://hash.ai/legal/ip/trademarks).
 - **Privacy complaints.** If you wish to access, transfer, change, or delete your personal information on the Block Protocol, please contact us via [our Support website](/contact).
 - **Content governed by our [Community Guidelines](/legal/community) and [Acceptable Use](/legal/acceptable-use) policies**, such as [malware](/legal/acceptable-use/malware) or general-purpose tools. If you have questions about our Community Guidelines or believe that content on the Block Protocol might violate our guidelines, you can [contact us](/contact).
 
