--- a/apps/site/src/_pages/spec/03_hook.mdx
+++ b/apps/site/src/_pages/spec/03_hook.mdx
@@ -27,7 +27,7 @@ Blocks initiate hooks by asking embedding applications to take over a DOM node (
 
 ### <Hidden>Establishing hooks </Hidden>Specification
 
-To request a view is rendered into a hook, a block MUST send a `hook` [message](https://www.notion.so/Hook-module-spec-1fcc185dc67c4ce7ace06878a144977d). The value for `hookId` MUST be `null` when a block first establishes a hook.
+To request a view is rendered into a hook, a block MUST send a `hook` [message](https://blockprotocol.org/spec/core#glossary). The value for `hookId` MUST be `null` when a block first establishes a hook.
 
 If the embedding application **supports** the requested hook type:
 
